--- a/package.json
+++ b/package.json
@@ -1,15 +1,46 @@
 {
-  "name": "lautfrondend",
+  "name": "LAUTFrontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
+    "axios": "^0.22.0",
+    "cra-template": "1.1.2",
+    "eth-multicall": "^1.4.0",
+    "http-status-codes": "2.1.4",
+    "identicon.js": "^2.3.3",
+    "immutable": "^4.0.0-rc.15",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-d3-tree": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-marquee-slider": "^1.1.5",
+    "react-qrcode-logo": "^2.5.0",
+    "react-query": "^3.25.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-scroll": "^1.8.4",
+    "react-swipeable-views": "^0.14.0",
+    "react-toastify": "^8.0.3",
+    "recharts": "^2.1.4",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.1",
+    "validator": "^13.6.0",
+    "web-vitals": "^2.1.0",
+    "web3": "^1.3.4",
+    "web3modal": "^1.9.3"
+  },
+  "resolutions": {
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,6 +53,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
   },
   "browserslist": {
     "production": [
